<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="346dp"
    android:layout_height="wrap_content"
    android:layout_marginLeft="7dp"
    android:layout_marginTop="0dp"
    android:layout_marginRight="7dp"
    android:layout_marginBottom="7dp"
    android:orientation="vertical"
    android:background="@drawable/unlock_screen_app_content_view_background" >
    <RelativeLayout 
       android:layout_width="match_parent"
       android:layout_height="30dp"
       android:background="@drawable/unlock_screen_app_content_view_background_top" >
           <ImageView 
	         android:layout_width="18dp"
	         android:layout_height="18dp"
	         android:layout_marginLeft="6dip"
	         android:layout_alignParentLeft="true"
	         android:layout_centerVertical="true"
	         android:src="@drawable/app_map"/>
            <TextView 
	          android:layout_width="wrap_content"
	          android:layout_height="wrap_content"
		   android:layout_marginLeft="30dip"
	         android:layout_alignParentLeft="true"
		   android:layout_centerVertical="true"
		   android:text="@string/maps_nearby"
		   android:textColor="@color/app_name_color"
		   android:textSize="12sp" 
		            />
             <TextView 
                 android:id="@+id/maps_nearby_expand_or_hide"
	          android:layout_width="wrap_content"
	          android:layout_height="wrap_content"
	          android:layout_alignParentRight="true"
		   android:layout_marginRight="15dip"
		   android:layout_centerVertical="true"
		   android:text="@string/siri_suggest_expand"
		   android:textColor="@color/app_name_color"
		   android:textSize="12sp"
                   android:visibility="gone" />
     </RelativeLayout >
     <LinearLayout 
              android:id="@+id/error_view"
		android:layout_height="wrap_content"
		android:layout_width="match_parent"
		android:minHeight="97dp"
		android:orientation="vertical"
		android:gravity="center"
		android:background="#10ffffff"
		android:visibility="gone">
		<TextView 
                 android:id="@+id/error_text"
	          android:layout_width="match_parent"
	          android:layout_height="wrap_content"
	          android:layout_marginLeft="15dip"
	          android:layout_marginRight="15dip"
	          android:gravity="center" 
		   android:text="@string/error"
		   android:textColor="#000"
		   android:textSize="15sp" />
		<TextView 
                 android:id="@+id/can_not_show_abnormal_events"
	          android:layout_width="match_parent"
	          android:layout_height="wrap_content"
	          android:layout_marginLeft="15dip"
	          android:layout_marginRight="15dip"
	          android:gravity="center" 
		   android:text="@string/can_not_show_abnormal_events"
		   android:textColor="@color/gray_text_color"
		   android:textSize="15sp" />  
     </LinearLayout>
     <LinearLayout 
              android:id="@+id/empty_content_view"
		android:layout_height="wrap_content"
		android:layout_width="match_parent"
		android:minHeight="97dp"
		android:orientation="vertical"
		android:gravity="center"
		android:background="#10ffffff"
		android:visibility="gone">
		<TextView 
                 android:id="@+id/empty_content_text"
	          android:layout_width="match_parent"
	          android:layout_height="wrap_content"
	          android:layout_marginLeft="15dip"
	          android:layout_marginRight="15dip"
	          android:gravity="center" 
		   android:text="@string/on_anything"
		   android:textColor="@color/gray_text_color"
		   android:textSize="15sp" />
     </LinearLayout>	
        	
     <LinearLayout 
              android:id="@+id/map_suggest_apps"
		android:layout_height="wrap_content"
		android:layout_width="match_parent"
		android:minHeight="97dp"
		android:paddingLeft="8dip"
		android:paddingRight="8dip"
		android:paddingTop="10dip"
		android:paddingBottom="10dip"
		android:orientation="horizontal" 
		android:background="#10ffffff"
		>
		<LinearLayout 
			android:layout_weight="1" 
			android:layout_height="wrap_content"
			android:layout_width="0dip"
			android:orientation="vertical"
			android:gravity="center" 
			>
			<ImageView
                             android:id="@+id/cate_suggest"
                             android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:src="@drawable/cate"
			/>
			<TextView
			     android:id="@+id/cate_suggest_text"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
			     android:text="@string/nearby_cate"
			     android:textSize="11sp"
			     android:textColor="#000"
	              />
		</LinearLayout>
		<LinearLayout 
			android:layout_weight="1" 
			android:layout_height="wrap_content"
			android:layout_width="0dip"
			android:orientation="vertical"
			android:gravity="center" 
			>
			<ImageView
                             android:id="@+id/cold_drink_shop_suggest"
                            android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:src="@drawable/cold_drink_shop"
			/>
                           
			<TextView 
			     android:id="@+id/cold_drink_shop_suggest_text"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
			     android:text="@string/nearby_cold_drink_shop"
			     android:textSize="11sp"
			     android:textColor="#000"
	              />
		</LinearLayout>	
		<LinearLayout 
			android:layout_weight="1" 
			android:layout_height="wrap_content"
			android:layout_width="0dip"
			android:orientation="vertical"
			android:gravity="center" 
			>
			<ImageView
                             android:id="@+id/trade_suggest"
                             android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:src="@drawable/trade"
			/>
                           
			<TextView
			     android:id="@+id/trade_suggest_text"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
			     android:text="@string/nearby_trade"
			     android:textSize="11sp"
			     android:textColor="#000"
	              />
		</LinearLayout>	
		<LinearLayout 
			android:layout_weight="1" 
			android:layout_height="wrap_content"
			android:layout_width="0dip"
			android:orientation="vertical"
			android:gravity="center" 
			>
			<ImageView
                             android:id="@+id/gas_station_suggest"
                             android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:src="@drawable/gas_station"
			/>
                          
			<TextView 
			     android:id="@+id/gas_station_suggest_text"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
			     android:text="@string/nearby_gas_station"
			     android:textSize="11sp"
			     android:textColor="#000"
	              />
		</LinearLayout>
	</LinearLayout>
</LinearLayout>
