<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="346dp"
    android:layout_height="wrap_content"
    android:layout_marginLeft="7dp"
    android:layout_marginTop="0dp"
    android:layout_marginRight="7dp"
    android:layout_marginBottom="7dp"
    android:orientation="vertical"
    android:background="@drawable/unlock_screen_app_content_view_background" >
    <RelativeLayout 
       android:layout_width="match_parent"
       android:layout_height="30dp"
       android:background="@drawable/unlock_screen_app_content_view_background_top" >
           <ImageView 
	         android:layout_width="18dp"
	         android:layout_height="18dp"
	         android:layout_marginLeft="6dip"
	         android:layout_alignParentLeft="true"
	         android:layout_centerVertical="true"
	         android:src="@drawable/app_map"/>
            <TextView 
	          android:layout_width="wrap_content"
	          android:layout_height="wrap_content"
		   android:layout_marginLeft="30dip"
	         android:layout_alignParentLeft="true"
		   android:layout_centerVertical="true"
		   android:text="@string/maps_transit"
		   android:textColor="@color/app_name_color"
		   android:textSize="12sp" 
		            />
             <TextView 
                 android:id="@+id/maps_transit_expand_or_hide"
	          android:layout_width="wrap_content"
	          android:layout_height="wrap_content"
	          android:layout_alignParentRight="true"
		   android:layout_marginRight="15dip"
		   android:layout_centerVertical="true"
		   android:text="@string/siri_suggest_expand"
		   android:textColor="@color/app_name_color"
		   android:textSize="12sp"
                  android:visibility="gone" />
     </RelativeLayout >
     <LinearLayout 
              android:id="@+id/error_view"
		android:layout_height="wrap_content"
		android:layout_width="match_parent"
		android:minHeight="97dp"
		android:orientation="vertical"
		android:gravity="center_vertical"
		android:background="#10ffffff"
		>
		<TextView 
                 android:id="@+id/error_text"
	          android:layout_width="match_parent"
	          android:layout_height="wrap_content"
	          android:layout_marginLeft="15dip"
	          android:layout_marginRight="15dip"
	          android:gravity="left" 
		   android:text="@string/error"
		   android:textColor="#000"
		   android:textSize="15sp" />
		<TextView 
                 android:id="@+id/can_not_show_abnormal_events"
	          android:layout_width="match_parent"
	          android:layout_height="wrap_content"
	          android:layout_marginLeft="15dip"
	          android:layout_marginRight="15dip"
	          android:gravity="left" 
		   android:text="@string/can_not_show_abnormal_events"
		   android:textColor="@color/gray_text_color"
		   android:textSize="15sp" />  
     </LinearLayout>
     
</LinearLayout>
