<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/android_usb"
    android:id="@+id/rootView"
     >
    <TextView  android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/usb_storage_activity_title"
               android:textStyle="bold"
               android:textSize="18sp" 
               android:layout_alignParentTop="true"
               android:layout_marginTop="5dp"            android:visibility="gone"
               android:layout_marginLeft="10dp"/>
   
   <RelativeLayout
        android:layout_width="wrap_content"    
        android:layout_height="wrap_content"   
        android:layout_centerHorizontal="true"        
        android:layout_alignParentBottom="true"  
        android:layout_marginBottom="4dip"      
        >

        <Button android:id="@+id/mount_button" 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
	    android:layout_gravity="center_vertical|center_horizontal"
            android:paddingLeft="18dip"
            android:paddingRight="18dip"
            android:text="@string/usb_storage_button_mount"
            android:textColor="#000000"
            android:textSize="17sp"
            android:background="@drawable/btn_mount_open"
            />
        <Button android:id="@+id/unmount_button"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
	    android:layout_gravity="center_vertical|center_horizontal"
            android:paddingLeft="18dip"
            android:paddingRight="18dip"
            android:text="@string/usb_storage_stop_button_mount"
            android:textColor="#000000"
            android:textSize="17sp"
            android:background="@drawable/btn_mount_open"
            />      
        <ProgressBar android:id="@+id/progress"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_centerInParent="true"
            android:indeterminate="false"
            android:indeterminateDrawable="@drawable/progress_my_style"
            />
    </RelativeLayout>
</RelativeLayout>
